--- a/todolist/Views/main.html
+++ b/todolist/Views/main.html
@@ -18,7 +18,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-primary">
         <div class="container">
-            <a class="navbar-brand" href="#"><img alt="Test Logo" src="images/logo.png">
+            <a class="navbar-brand" href="#"><img alt="Todo Logo" src="images/logo.png">
             </a>
             <button aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"
                 class="navbar-toggler" data-target="#navbarResponsive" data-toggle="collapse" type="button">
@@ -65,7 +65,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <h5>PHP Programming Test</h5>
+                    <h5>PHP Programming for Todo List</h5>
                     <hr class="my-1">
                     <div class="row">
                         <div class="col-6 col-md-12">
