--- a/todolist/Views/main.html
+++ b/todolist/Views/main.html
@@ -18,7 +18,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-primary">
         <div class="container">
-            <a class="navbar-brand" href="#"><img alt="Todo Logo" src="images/logo.png">
+            <a class="navbar-brand" href="./"><img alt="Todo Logo" src="./images/logo.png">
             </a>
             <button aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"
                 class="navbar-toggler" data-target="#navbarResponsive" data-toggle="collapse" type="button">
@@ -27,7 +27,7 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="">Home</a>
+                        <a class="nav-link" href="./">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./add">Add</a>
@@ -71,7 +71,7 @@
                         <div class="col-6 col-md-12">
                             <ul class="list-unstyled">
                                 <li>
-                                    <a href="#">Home</a>
+                                    <a href="./">Home</a>
                                 </li>
                                 <li>
                                     <a href="./add">Create a New Task</a>
