--- a/todolist/Views/main.html
+++ b/todolist/Views/main.html
@@ -18,7 +18,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-primary">
         <div class="container">
-            <a class="navbar-brand" href="./"><img alt="Todo Logo" src="./images/logo.jpg">
+            <a class="navbar-brand" href="./"><img alt="Todo Logo" src="./images/logo.png">
             </a>
             <button aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"
                 class="navbar-toggler" data-target="#navbarResponsive" data-toggle="collapse" type="button">
